--- a/Course_Content/getting_started/index.html
+++ b/Course_Content/getting_started/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Getting Started</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Home: heading 1</h1>
@@ -31,6 +32,10 @@
     
     <img src="images/avatar_icons.jpg" alt="Not Found" decoding="async" width="150" height="150">
     <img src="images/coding_avatar.png" alt="Not Here ATM", decoding="async", width="50" height="50">
+
+
+    <h2>Navigate to LIST page:</h2>
+    <a href="pages/lists.html">Click on ME!!</a>
 
 
     </body>
