--- a/Course_Content/getting_started/pages/full_size_image.html
+++ b/Course_Content/getting_started/pages/full_size_image.html
@@ -8,6 +8,6 @@
 <body>
     <img src="../images/avatar_icons.jpg" alt="Not Found" decoding="async">
     <br/>
-    <a href="/index.html">Home</a>
+    <a href="../index.html">Home</a>
 </body>
 </html>
