--- a/Course_Content/Contact Book App/index.html
+++ b/Course_Content/Contact Book App/index.html
@@ -9,7 +9,7 @@
 
     <div id="table">Contacts Loading...</div>
     <button id="refresh" type="button">Refresh</button>
-    <button id="addConttact" type="button">Add Contact</button>
+    <button id="addContact" type="button">Add Contact</button>
     
 
     <script src="config.js"></script>
@@ -17,6 +17,7 @@
 
         // event listener
         document.getElementById("refresh").addEventListener('click', fetchContacts);
+        document.getElementById("addContact").addEventListener('click', addContact);
 
         function fetchContacts(){
             fetch(rootPath + "controller/get-contacts/") // basic fetch api call
@@ -35,20 +36,26 @@
 
                 for(a in data){ // loop used to iterate over an array
                     output += `
-
-                        <tr>
+                        <tr onclick="editContact(${data[a].id})">
                             <td><img src = "${rootPath}controller/uploads/${data[a].avatar}" width ="40"/></td>
                             <td><h5>${data[a].firstname}</h5></td>
                             <td><h5>${data[a].lastname}</h5></td>
                         </tr>
                     
                     `
-
                 }
 
                 output += "</table>"
                 document.getElementById("table").innerHTML = output;
 
+        }
+
+        function addContact(){
+            window.open("add-contact.html", "_self");
+        }
+
+        function editContact(contactId){
+            window.open("edit-contact.html?id=" + contactId, "_self");
         }
 
 
